tests/error/array_errors/non_array_subscript.err
Error: Unsupported (at $FILE:10:4)
   | 
 8 | def main() -> None:
 9 |     l = [1, 2, 3]
10 |     l[0] = 3
   |     ^^^^ Subscript assignments to non-arrays are not supported

Guppy compilation failed due to 1 previous error
